# foundation

./: .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  build.json
example/include/libA/: sayHelloWorld.h
example/include/libB/: sayWorld.h
example/src/: main.cpp
example/src/libA/: sayHelloWorld.cpp
example/src/libB/: sayWorld.cpp
example/src/libC/: sayHello.cpp
lib/: CMakeLists.txt  UpdateDependencies.cmake
test/: CMakeLists.txt
